# pr-search

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/embedding/: manager.rs  mod.rs
src/errors/: embedding.rs  github.rs  index.rs  mod.rs  search.rs
src/github/: fetcher.rs  mod.rs  model.rs
src/index/: builder.rs  mod.rs  storage.rs
src/search/: engine.rs  filter.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: cli_parsing.rs
